add missing serverless global

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,6 +5,7 @@ phases:
     runtime-versions:
       nodejs: 14
     commands:
+      - npm i -g serverless
       - npm install
   build:
     commands:
